--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-26S5T791WC"></script>
     <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
 
-      gtag('config', 'G-26S5T791WC');
+        gtag('config', 'G-26S5T791WC');
     </script>
 </head>
 
@@ -43,9 +43,11 @@
         <div class="row intro">
             <div class="col-9">
                 <h1 class="text-center">Chen Wang (王琛)</h1>
-                <p>I am an incoming CIS PhD student at the University of Pennsylvania, advised by Prof. Lingjie Liu. My research interest lies in computer graphics and computer vision, especially 3D generation. </p>
-                    <!-- My long-term research goal aims to help machines to perceive the 3D world, which involves 3D scene understanding, modelling and interaction.</p> -->
-                <p>I graduated with a M.S. in CS from Tsinghua University in June, 2023, working with Prof. Shi-Min Hu and Prof. Song-Hai Zhang. Before that, I received a B.E. in CS and a B.A. in Economics from Tsinghua
+                <p>I am an incoming CIS PhD student at the University of Pennsylvania, advised by Prof. Lingjie Liu. My
+                    research interest lies in computer graphics and computer vision, especially 3D generation. </p>
+                <!-- My long-term research goal aims to help machines to perceive the 3D world, which involves 3D scene understanding, modelling and interaction.</p> -->
+                <p>I graduated with a M.S. in CS from Tsinghua University in June, 2023, working with Prof. Shi-Min Hu
+                    and Prof. Song-Hai Zhang. Before that, I received a B.E. in CS and a B.A. in Economics from Tsinghua
                     University in June, 2020.
                 </p>
                 <!-- <p class="quote">"Our primary drive in life is not pleasure, but the discovery and pursuit of what we personally find meaningful. (In Man's Search For Meaning)"</p> -->
@@ -65,28 +67,40 @@
                 <div class="pub-list pub-link">
                     <ul>
                         <!-- <li>VMesh: Hybrid Volume-Mesh Representation for Efficient View Synthesis</li>
-                        <li>Yuan-Chen Guo, Yan-Pei Cao, <u>Chen Wang</u>, Yu He, Ying Shan, Xiaohu Qie, Song-Hai Zhang</li>
+                        <li>Yuan-Chen Guo, Yan-Pei Cao, <u>Chen Wang</u>, Yu He, Ying Shan, Xiaohu Qie, Song-Hai Zhang
+                        </li>
+                        <li><em>ACM SIGGRAPH Asia (Conference Proceedings), 2023</em></li>
                         <li style="margin-bottom: 10px"><a
-                            href="https://arxiv.org/abs/2303.16184">Paper</a>&nbsp;|&nbsp;<a
-                            href="https://bennyguo.github.io/vmesh/">Project Page</a> -->
+                                href="https://arxiv.org/abs/2303.16184">Paper</a>&nbsp;|&nbsp;<a
+                                href="https://bennyguo.github.io/vmesh/">Project Page</a> -->
+
+                        <li>Digging into Depth Priors for Outdoor Neural Radiance Fields</li>
+                        <li><u>Chen Wang</u>, Jiadai Sun, Lina Liu, Chenming Wu, Zhelun Shen, Dayan Wu, Yuchao Dai,
+                            Liangjun Zhang</li>
+                        <li><em>ACM Internation Conference on Multimedia, 2023</em></li>
+                        <li style="margin-bottom: 10px"><a
+                                href="https://cwchenwang.github.io/outdoor-nerf-depth/data/paper.pdf">Paper</a>&nbsp;|&nbsp;<a
+                                href="https://cwchenwang.github.io/outdoor-nerf-depth">Project Page</a>&nbsp;|&nbsp;<a
+                                href="https://github.com/cwchenwang/outdoor-nerf-depth">Code</a></li></a></li>
 
                         <li>StructNeRF: Neural Radiance Fields for Indoor Scenes with Structural Hints</li>
                         <li>Zheng Chen, <u>Chen Wang</u>, Yuan-Chen Guo, Song-Hai Zhang</li>
-                        <li><em>In Revision of TPAMI</em></li>
+                        <li><em>IEEE Transactions on Pattern Analysis and Machine Intelligence, 2023</em></li>
                         <li style="margin-bottom: 10px"></li>
 
                         <li>DeepPortraitDrawing: Generating Human Body Images from Freehand Sketches</li>
-                        <li>Xian Wu*, <u>Chen Wang*</u>, Hongbo Fu, Ariel Shamir, Song-Hai Zhang, Shi-Min Hu (Equal Contribution)</li>
+                        <li>Xian Wu*, <u>Chen Wang*</u>, Hongbo Fu, Ariel Shamir, Song-Hai Zhang (Equal Contribution)
+                        </li>
                         <li><em>Computer & Graphics, 2023</em></li>
-                        <li style="margin-bottom: 10px"><a
-                            href="https://arxiv.org/abs/2205.02070">Paper</a></li>
-                            
+                        <li style="margin-bottom: 10px"><a href="https://arxiv.org/abs/2205.02070">Paper</a></li>
+
                         <li>NeRF-SR: High-Quality Neural Radiance Fields using Super-sampling</li>
                         <li><u>Chen Wang</u>, Xian Wu, Yuan-Chen Guo, Song-Hai Zhang, Yu-Wing Tai, Shi-Min Hu</li>
                         <li><em>ACM Internation Conference on Multimedia, 2022</em></li>
                         <li style="margin-bottom: 10px"><a
-                            href="https://arxiv.org/abs/2112.01759">Paper</a>&nbsp;|&nbsp;<a
-                            href="https://cwchenwang.github.io/NeRF-SR">Project Page</a>&nbsp;|&nbsp;<a href="https://github.com/cwchenwang/NeRF-SR">Code</a></li></a></li>
+                                href="https://arxiv.org/abs/2112.01759">Paper</a>&nbsp;|&nbsp;<a
+                                href="https://cwchenwang.github.io/NeRF-SR">Project Page</a>&nbsp;|&nbsp;<a
+                                href="https://github.com/cwchenwang/NeRF-SR">Code</a></li></a></li>
 
                         <!-- <li>Learning Implicit Glyph Shape Representation</li>
                         <li>Ying-Tian Liu, Yuan-Chen Guo, Yi-Xiao Li, <u>Chen Wang</u>, Song-Hai Zhang</li>
@@ -94,7 +108,8 @@
 
                         <li>On Rotation Gains Within and Beyond Perceptual Limitations for Seated VR</li>
                         <li><u>Chen Wang</u>, Song-Hai Zhang, Yi-Zhuo Zhang, Stefanie Zollmann, Shi-Min Hu</li>
-                        <li style="margin-bottom: 10px"><em>IEEE Transactions on Visualization and Computer Graphics, 2022</em></li>
+                        <li style="margin-bottom: 10px"><em>IEEE Transactions on Visualization and Computer Graphics,
+                                2022</em></li>
 
                         <!-- <li>PalmBoard: Leveraging Implicit Touch Pressure in Statistical Decoding for Indirect Text Entry.</li>
                         <li>Xin Yi, <u>Chen Wang</u>, Xiaojun Bi, Yuanchun Shi (First Student Author)</li> 
@@ -111,7 +126,7 @@
                 <p class="section-name">Professional Services</p>
                 <div class="exp-list">
                     <ul>
-                        <li>Reviewer: ACM MM 2023, CVPR 2023, ICLR 2023
+                        <li>Reviewer: PG 2023, ACM MM 2023, CVPR 2023, ICLR 2023
                         </li>
                     </ul>
                 </div>
@@ -122,12 +137,14 @@
                 <p class="section-name">Experiences</p>
                 <div class="exp-list">
                     <ul>
-                        <li>2020.08 - 2023.06: Graduate Research Assistant at Graphics and Geometry Group, DCST, Tsinghua
+                        <li>2020.08 - 2023.06: Graduate Research Assistant at Graphics and Geometry Group, DCST,
+                            Tsinghua
                             University
                         </li>
                         <li>2020.06 - 2020.08: Software Engineer Intern at Tencent</li>
                         <li>2019.07 - 2019.08: Visiting student at University of Southern California</li>
-                        <li>2018.10 - 2020.06: Undergraduate Research Assistant at HCI group, DCST, Tsinghua University</li>
+                        <li>2018.10 - 2020.06: Undergraduate Research Assistant at HCI group, DCST, Tsinghua University
+                        </li>
                     </ul>
                 </div>
             </div>
