--- a/index.html
+++ b/index.html
@@ -63,16 +63,23 @@
         </div>
         <div class="row justify-content-center" id="publications">
             <div class="col-10">
-                <p class="section-name">Publications</p>
+                <p class="section-name" style="margin-bottom: 3pt; ">Publications</p>
+                <p style="margin-bottom: 3pt;">* denotes equal contribution</p>
                 <div class="pub-list pub-link">
                     <ul>
-                        <!-- <li>VMesh: Hybrid Volume-Mesh Representation for Efficient View Synthesis</li>
+                        <li>DreamEditor: Text-Driven 3D Scene Editing with Neural Fields</li>
+                        <li>Jingyu Zhuang*, <u>Chen Wang*</u>, Lingjie Liu, Guanbin Li, Liang Lin
+                        </li>
+                        <li><em>ACM SIGGRAPH Asia (Conference Proceedings), 2023</em></li>
+                        <li style="margin-bottom: 10px"></li>
+
+                        <li>VMesh: Hybrid Volume-Mesh Representation for Efficient View Synthesis</li>
                         <li>Yuan-Chen Guo, Yan-Pei Cao, <u>Chen Wang</u>, Yu He, Ying Shan, Xiaohu Qie, Song-Hai Zhang
                         </li>
                         <li><em>ACM SIGGRAPH Asia (Conference Proceedings), 2023</em></li>
                         <li style="margin-bottom: 10px"><a
                                 href="https://arxiv.org/abs/2303.16184">Paper</a>&nbsp;|&nbsp;<a
-                                href="https://bennyguo.github.io/vmesh/">Project Page</a> -->
+                                href="https://bennyguo.github.io/vmesh/">Project Page</a>
 
                         <li>Digging into Depth Priors for Outdoor Neural Radiance Fields</li>
                         <li><u>Chen Wang</u>, Jiadai Sun, Lina Liu, Chenming Wu, Zhelun Shen, Dayan Wu, Yuchao Dai,
@@ -89,7 +96,7 @@
                         <li style="margin-bottom: 10px"></li>
 
                         <li>DeepPortraitDrawing: Generating Human Body Images from Freehand Sketches</li>
-                        <li>Xian Wu*, <u>Chen Wang*</u>, Hongbo Fu, Ariel Shamir, Song-Hai Zhang (Equal Contribution)
+                        <li>Xian Wu*, <u>Chen Wang*</u>, Hongbo Fu, Ariel Shamir, Song-Hai Zhang
                         </li>
                         <li><em>Computer & Graphics, 2023</em></li>
                         <li style="margin-bottom: 10px"><a href="https://arxiv.org/abs/2205.02070">Paper</a></li>
