--- a/outdoor-nerf-depth/index.html
+++ b/outdoor-nerf-depth/index.html
@@ -59,7 +59,7 @@
                 <ul class="list-inline">
                     <li>
                         <a href="https://cwchenwang.github.io/">
-                            Chen Wang<sup>1,4</sup>
+                            Chen Wang<sup>1,2</sup>
                         </a>
                     </li>
                     <li>
@@ -69,17 +69,17 @@
                     </li>
                     <li>
                         <a href="https://scholar.google.com/citations?user=Mozc1JEAAAAJ">
-                            Lina Liu<sup>3,4</sup>
+                            Lina Liu<sup>3,2</sup>
                         </a>
                     </li>
                     <li>
                         <a href="https://chenming-wu.github.io/">
-                            Chenming Wu<sup>4</sup>
+                            Chenming Wu<sup>2</sup>
                         </a>
                     </li>
                     <li>
                         <a href="https://scholar.google.com/citations?user=pfzhh0IAAAAJ">
-                            Zhelun She<sup>4</sup>
+                            Zhelun Shen<sup>2</sup>
                         </a>
                     </li>
                     <li>
@@ -89,12 +89,12 @@
                     </li>
                     <li>
                         <a href="http://npu-cvr.cn/">
-                            Yuchao Dai<sup>2</sup>
+                            Yuchao Dai<sup>4</sup>
                         </a>
                     </li>
                     <li>
                         <a href="http://www.cs.unc.edu/~zlj/">
-                            Liangjun Zhang<sup>4</sup>
+                            Liangjun Zhang<sup>2</sup>
                         </a>
                     </li>
                 </ul>
@@ -104,14 +104,14 @@
                         <sup>1</sup>Tsinghua University
                     </li>
                     <li>
-                        <sup>2</sup>Northwestern Polytechnical University
+                        <sup>2</sup>Baidu Research
                     </li>
                     <li>
                         <sup>3</sup>Zhejiang University
                     </li>
                     <br />
                     <li>
-                        <sup>4</sup>Baidu Research
+                        <sup>4</sup>Northwestern Polytechnical University
                     </li>
                     <li>
                         <sup>5</sup>Chinese Academy of Sciences
@@ -143,7 +143,7 @@
                             </a>
                         </li> -->
                     <li>
-                        <a href="https://github.com/cwchenwang/NeRF-SR">
+                        <a href="https://github.com/cwchenwang/outdoor-nerf-depth">
                             <image src="img/github.png" height="60px">
                                 <h4><strong>Code (coming)</strong></h4>
                         </a>
@@ -193,9 +193,13 @@
                 </h4>
                 <p>Kitti (5 sequence) and Argoverse (3 sequence) </p>
                 <h4>
-                    Methods
+                    NeRF Methods
                 </h4>
                 <p>NeRF++, MipNeRF-360, Instant-NGP</p>
+                <h4>
+                    Depth Methods
+                </h4>
+                <p>MFFNet (completion), BTS (monocular), CFNet and PCWNet (stereo)</p>
                 <h4>
                     Procedure
                 </h4>
