--- a/index.html
+++ b/index.html
@@ -96,9 +96,9 @@
                         <li style="margin-bottom: 10px"></li>
 
                         <li>DeepPortraitDrawing: Generating Human Body Images from Freehand Sketches</li>
-                        <li>Xian Wu*, <u>Chen Wang*</u>, Hongbo Fu, Ariel Shamir, Song-Hai Zhang
+                        <li><u>Chen Wang*</u>, Xian Wu*, Hongbo Fu, Ariel Shamir, Song-Hai Zhang
                         </li>
-                        <li><em>Computer & Graphics, 2023</em></li>
+                        <li><em>Computer & Graphics (CADGraphics Oral), 2023</em></li>
                         <li style="margin-bottom: 10px"><a href="https://arxiv.org/abs/2205.02070">Paper</a></li>
 
                         <li>NeRF-SR: High-Quality Neural Radiance Fields using Super-sampling</li>
