--- a/outdoor-nerf-depth/index.html
+++ b/outdoor-nerf-depth/index.html
@@ -32,15 +32,15 @@
 
     <script src="js/app.js"></script>
 
-    <!-- Global site tag (gtag.js) - Google Analytics
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-2SC7YQN2LP"></script>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-6YG67CMXFS"></script>
     <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
 
-      gtag('config', 'G-2SC7YQN2LP');
-    </script> -->
+        gtag('config', 'G-6YG67CMXFS');
+    </script>
 
 </head>
 
@@ -264,7 +264,7 @@
     title={Digging into Depth Priors for Outdoor Neural Radiance Fields},
     author={Chen Wang and Jiadai Sun and Lina Liu and Chenming Wu 
             and Zhelun Shen and Dayan Wu and Yuchao Dai and Liangjun Zhang},
-    journal={Proceedings of the 30th ACM International Conference on Multimedia},
+    journal={Proceedings of the 31th ACM International Conference on Multimedia},
     year={2023}
 }</textarea>
                 </div>
