--- a/index.html
+++ b/index.html
@@ -43,14 +43,18 @@
         <div class="row intro">
             <div class="col-9">
                 <h1 class="text-center">Chen Wang (王琛)</h1>
-                <p>I am an incoming CIS PhD student at the University of Pennsylvania, advised by Prof. Lingjie Liu. My
-                    research interest lies in computer graphics and computer vision, especially 3D generation. </p>
+                <p>I am a CIS PhD student at the University of Pennsylvania starting from Fall 2023,
+                    advised by Prof.
+                    Lingjie Liu. I am also part of the <a href="https://www.grasp.upenn.edu"
+                        style="text-decoration: none;">GRASP lab</a>. My
+                    research interests are computer graphics and computer vision, especially 3D generation. </p>
                 <!-- My long-term research goal aims to help machines to perceive the 3D world, which involves 3D scene understanding, modelling and interaction.</p> -->
                 <p>I graduated with a M.S. in CS from Tsinghua University in June, 2023, working with Prof. Shi-Min Hu
                     and Prof. Song-Hai Zhang. Before that, I received a B.E. in CS and a B.A. in Economics from Tsinghua
                     University in June, 2020.
                 </p>
-                <!-- <p class="quote">"Our primary drive in life is not pleasure, but the discovery and pursuit of what we personally find meaningful. (In Man's Search For Meaning)"</p> -->
+                <!-- <p class=" quote">"Our primary drive in life is not pleasure, but the discovery and pursuit of
+                        what we personally find meaningful. (In Man's Search For Meaning)"</p> -->
                 <div class="links text-center">
                     <a href="mailto:cw.chenwang@outlook.com">Email</a>
                     <a href="data/CV_en.pdf">CV</a>
@@ -68,7 +72,7 @@
                 <div class="pub-list pub-link">
                     <ul>
                         <li>DreamEditor: Text-Driven 3D Scene Editing with Neural Fields</li>
-                        <li>Jingyu Zhuang*, <u>Chen Wang*</u>, Lingjie Liu, Guanbin Li, Liang Lin
+                        <li>Jingyu Zhuang*, <u>Chen Wang*</u>, Liang Lin, Lingjie Liu, Guanbin Li
                         </li>
                         <li><em>ACM SIGGRAPH Asia (Conference Proceedings), 2023</em></li>
                         <li style="margin-bottom: 10px"></li>
@@ -98,7 +102,7 @@
                         <li>DeepPortraitDrawing: Generating Human Body Images from Freehand Sketches</li>
                         <li><u>Chen Wang*</u>, Xian Wu*, Hongbo Fu, Ariel Shamir, Song-Hai Zhang
                         </li>
-                        <li><em>Computer & Graphics (CADGraphics Oral), 2023</em></li>
+                        <li><em>Computer & Graphics (CAD/Graphics Oral), 2023</em></li>
                         <li style="margin-bottom: 10px"><a href="https://arxiv.org/abs/2205.02070">Paper</a></li>
 
                         <li>NeRF-SR: High-Quality Neural Radiance Fields using Super-sampling</li>
@@ -172,7 +176,7 @@
         </div>
         <footer class="text-center">
             <p>This website was last updated by Chen in May, 2023.</p>
-            <p>© Copyright 2021 - 2023</p>
+            <p>© Copyright 2021 - Present</p>
         </footer>
     </div>
 
