--- a/index.html
+++ b/index.html
@@ -45,29 +45,30 @@
                 <h1 class="text-center">Chen Wang (王琛)</h1>
                 <p>I am a CIS PhD student at the University of Pennsylvania starting from Fall 2023,
                     advised by Prof.
-                    Lingjie Liu. I am also part of the <a href="https://www.grasp.upenn.edu"
+                    Lingjie Liu and affiliated with the <a href="https://www.grasp.upenn.edu"
                         style="text-decoration: none;">GRASP lab</a>. My
                     research interests are computer graphics and computer vision, especially 3D generation. </p>
                 <!-- My long-term research goal aims to help machines to perceive the 3D world, which involves 3D scene understanding, modelling and interaction.</p> -->
-                <p>I graduated with a M.S. in CS from Tsinghua University in June, 2023, working with Prof. Shi-Min Hu
-                    and Prof. Song-Hai Zhang. Before that, I received a B.E. in CS and a B.A. in Economics from Tsinghua
-                    University in June, 2020.
+                <p>I did my undergraduate and master study in CS at Tsinghua University, working with Prof.
+                    Shi-Min Hu
+                    and Prof. Song-Hai Zhang.
                 </p>
                 <!-- <p class=" quote">"Our primary drive in life is not pleasure, but the discovery and pursuit of
                         what we personally find meaningful. (In Man's Search For Meaning)"</p> -->
                 <div class="links text-center">
                     <a href="mailto:cw.chenwang@outlook.com">Email</a>
                     <a href="data/CV_en.pdf">CV</a>
+                    <a href="https://scholar.google.com/citations?user=5cY3Ho4AAAAJ&hl=en">Google Scholar</a>
                     <a href="https://www.linkedin.com/in/%E7%90%9B-%E7%8E%8B-05509b161/">Linkedin</a>
                 </div>
             </div>
-            <div class="col-3">
-                <img src="data/pic.JPG" class="avatar img-fluid rounded-circle">
+            <div class="col-2">
+                <img src="data/pic.png" class="avatar img-fluid rounded-circle">
             </div>
         </div>
         <div class="row justify-content-center" id="publications">
             <div class="col-10">
-                <p class="section-name" style="margin-bottom: 3pt; ">Publications</p>
+                <p class="section-name" style="margin-bottom: 3pt; ">Selected Publications</p>
                 <p style="margin-bottom: 3pt;">* denotes equal contribution</p>
                 <div class="pub-list pub-link">
                     <ul>
@@ -75,7 +76,10 @@
                         <li>Jingyu Zhuang*, <u>Chen Wang*</u>, Liang Lin, Lingjie Liu, Guanbin Li
                         </li>
                         <li><em>ACM SIGGRAPH Asia (Conference Proceedings), 2023</em></li>
-                        <li style="margin-bottom: 10px"></li>
+                        <li style="margin-bottom: 10px"><a
+                                href="https://arxiv.org/abs/2306.13455">Paper</a>&nbsp;|&nbsp;<a
+                                href="https://zjy526223908.github.io/DreamEditor/">Project Page</a>&nbsp;|&nbsp;<a
+                                href="https://github.com/zjy526223908/DreamEditor">Code</a></li></a></li>
 
                         <li>VMesh: Hybrid Volume-Mesh Representation for Efficient View Synthesis</li>
                         <li>Yuan-Chen Guo, Yan-Pei Cao, <u>Chen Wang</u>, Yu He, Ying Shan, Xiaohu Qie, Song-Hai Zhang
@@ -137,13 +141,13 @@
                 <p class="section-name">Professional Services</p>
                 <div class="exp-list">
                     <ul>
-                        <li>Reviewer: PG 2023, ACM MM 2023, CVPR 2023, ICLR 2023
+                        <li>Reviewer: CVPR, ICLR, MM, PG, WACV
                         </li>
                     </ul>
                 </div>
             </div>
         </div>
-        <div class="row justify-content-center">
+        <!-- <div class="row justify-content-center">
             <div class="col-10">
                 <p class="section-name">Experiences</p>
                 <div class="exp-list">
@@ -159,7 +163,7 @@
                     </ul>
                 </div>
             </div>
-        </div>
+        </div> -->
         <div class="row justify-content-center">
             <div class="col-10">
                 <p class="section-name">Honors and Awards</p>
@@ -175,7 +179,7 @@
             </div>
         </div>
         <footer class="text-center">
-            <p>This website was last updated by Chen in May, 2023.</p>
+            <p>This website was last updated by Chen in Oct, 2023.</p>
             <p>© Copyright 2021 - Present</p>
         </footer>
     </div>
