--- a/outdoor-nerf-depth/index.html
+++ b/outdoor-nerf-depth/index.html
@@ -145,7 +145,7 @@
                     <li>
                         <a href="https://github.com/cwchenwang/outdoor-nerf-depth">
                             <image src="img/github.png" height="60px">
-                                <h4><strong>Code (coming)</strong></h4>
+                                <h4><strong>Code</strong></h4>
                         </a>
                     </li>
                 </ul>
@@ -187,7 +187,13 @@
                     Depth Priors
                 </h4>
                 <image src="img/depth-priors.png" style="width: 60%; margin-left: auto; margin-right: auto;"
-                    class="img-responsive" alt="kitti"></image>
+                    class="img-responsive" alt="priors"></image>
+                <h4>
+                    Depth Supervision Type
+                </h4>
+                <p>Direct: MSE, L1; Indirect: KL, URF</p>
+                <image src="img/loss.png" style="width: 60%; margin-left: auto; margin-right: auto;"
+                    class="img-responsive" alt="loss"></image>
                 <h4>
                     Datasets
                 </h4>
