--- a/index.html
+++ b/index.html
@@ -45,10 +45,8 @@
                 <h1 class="text-center">Chen Wang (王琛)</h1>
                 <p>I am a CIS PhD student at the University of Pennsylvania starting from Fall 2023,
                     advised by Prof.
-                    Lingjie Liu and affiliated with the <a href="https://www.grasp.upenn.edu"
-                        style="text-decoration: none;">GRASP lab</a>. My
+                    Lingjie Liu and affiliated with the GRASP lab. My
                     research interests are computer graphics and computer vision, especially 3D generation. </p>
-                <!-- My long-term research goal aims to help machines to perceive the 3D world, which involves 3D scene understanding, modelling and interaction.</p> -->
                 <p>I did my undergraduate and master study in CS at Tsinghua University, working with Prof.
                     Shi-Min Hu
                     and Prof. Song-Hai Zhang.
@@ -59,7 +57,6 @@
                     <a href="mailto:cw.chenwang@outlook.com">Email</a>
                     <a href="data/CV_en.pdf">CV</a>
                     <a href="https://scholar.google.com/citations?user=5cY3Ho4AAAAJ&hl=en">Google Scholar</a>
-                    <a href="https://www.linkedin.com/in/%E7%90%9B-%E7%8E%8B-05509b161/">Linkedin</a>
                 </div>
             </div>
             <div class="col-2">
@@ -147,30 +144,11 @@
                 </div>
             </div>
         </div>
-        <!-- <div class="row justify-content-center">
-            <div class="col-10">
-                <p class="section-name">Experiences</p>
-                <div class="exp-list">
-                    <ul>
-                        <li>2020.08 - 2023.06: Graduate Research Assistant at Graphics and Geometry Group, DCST,
-                            Tsinghua
-                            University
-                        </li>
-                        <li>2020.06 - 2020.08: Software Engineer Intern at Tencent</li>
-                        <li>2019.07 - 2019.08: Visiting student at University of Southern California</li>
-                        <li>2018.10 - 2020.06: Undergraduate Research Assistant at HCI group, DCST, Tsinghua University
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </div> -->
         <div class="row justify-content-center">
             <div class="col-10">
                 <p class="section-name">Honors and Awards</p>
                 <div class="exp-list">
                     <ul>
-                        <li>2022 Tsinghua Top Talent Scholarship, Finalist
-                        </li>
                         <li>2022 National Scholarship
                         </li>
                         <li>2022 Siebel Scholarship</li>
