--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                         <li>Digging into Depth Priors for Outdoor Neural Radiance Fields</li>
                         <li><u>Chen Wang</u>, Jiadai Sun, Lina Liu, Chenming Wu, Zhelun Shen, Dayan Wu, Yuchao Dai,
                             Liangjun Zhang</li>
-                        <li><em>ACM Internation Conference on Multimedia, 2023</em></li>
+                        <li><em>ACM International Conference on Multimedia (Oral), 2023</em></li>
                         <li style="margin-bottom: 10px"><a
                                 href="https://cwchenwang.github.io/outdoor-nerf-depth/data/paper.pdf">Paper</a>&nbsp;|&nbsp;<a
                                 href="https://cwchenwang.github.io/outdoor-nerf-depth">Project Page</a>&nbsp;|&nbsp;<a
@@ -108,7 +108,7 @@
 
                         <li>NeRF-SR: High-Quality Neural Radiance Fields using Super-sampling</li>
                         <li><u>Chen Wang</u>, Xian Wu, Yuan-Chen Guo, Song-Hai Zhang, Yu-Wing Tai, Shi-Min Hu</li>
-                        <li><em>ACM Internation Conference on Multimedia, 2022</em></li>
+                        <li><em>ACM International Conference on Multimedia, 2022</em></li>
                         <li style="margin-bottom: 10px"><a
                                 href="https://arxiv.org/abs/2112.01759">Paper</a>&nbsp;|&nbsp;<a
                                 href="https://cwchenwang.github.io/NeRF-SR">Project Page</a>&nbsp;|&nbsp;<a
