--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                         <li>DreamEditor: Text-Driven 3D Scene Editing with Neural Fields</li>
                         <li>Jingyu Zhuang*, <u>Chen Wang*</u>, Liang Lin, Lingjie Liu, Guanbin Li
                         </li>
-                        <li><em>ACM SIGGRAPH Asia (Conference Proceedings), 2023</em></li>
+                        <li><em>SIGGRAPH Asia Conference Papers, 2023</em></li>
                         <li style="margin-bottom: 10px"><a
                                 href="https://arxiv.org/abs/2306.13455">Paper</a>&nbsp;|&nbsp;<a
                                 href="https://zjy526223908.github.io/DreamEditor/">Project Page</a>&nbsp;|&nbsp;<a
@@ -81,7 +81,7 @@
                         <li>VMesh: Hybrid Volume-Mesh Representation for Efficient View Synthesis</li>
                         <li>Yuan-Chen Guo, Yan-Pei Cao, <u>Chen Wang</u>, Yu He, Ying Shan, Xiaohu Qie, Song-Hai Zhang
                         </li>
-                        <li><em>ACM SIGGRAPH Asia (Conference Proceedings), 2023</em></li>
+                        <li><em>SIGGRAPH Asia Conference Papers, 2023</em></li>
                         <li style="margin-bottom: 10px"><a
                                 href="https://arxiv.org/abs/2303.16184">Paper</a>&nbsp;|&nbsp;<a
                                 href="https://bennyguo.github.io/vmesh/">Project Page</a>
