--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="icon" type="image/x-icon" href="images/favicon.png">
     <!--Use downloaded bootstrap 5.1.3 -->
     <link href="bootstrap.min.css" rel="stylesheet">
+    <link href="https://db.onlinewebfonts.com/c/242a828d266472665bf6ad46819772eb?family=STXingkai" rel="stylesheet">
     <script src="bootstrap.bundle.min.js"></script>
     <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script> -->
@@ -32,6 +33,12 @@
         </div>
         <!-- ??? why the order is reversed -->
         <div class="ftsubheader">
+            <a href="#awards">Awards</a>
+        </div>
+        <div class="ftsubheader">
+            <a href="#services">Services</a>
+        </div>
+        <div class="ftsubheader">
             <a href="#publications">Publications</a>
         </div>
         <div class="ftsubheader">
@@ -42,11 +49,13 @@
     <div class="container" id="home">
         <div class="row intro">
             <div class="col-9">
-                <h1 class="text-center">Chen Wang (王琛)</h1>
+                <h1 class="text-center">Chen Wang&nbsp&nbsp<span style="font-family: STXingkai;">王琛</span>
+                </h1>
                 <p>I am a CIS PhD student at the University of Pennsylvania starting from Fall 2023,
                     advised by Prof.
                     Lingjie Liu and affiliated with the GRASP lab. My
-                    research interests are computer graphics and computer vision, especially 3D generation. </p>
+                    research interests are computer graphics and computer vision, with a focus on 3D generative models
+                    and neural 3D representaions.</p>
                 <p>I did my undergraduate and master study in CS at Tsinghua University, working with Prof.
                     Shi-Min Hu
                     and Prof. Song-Hai Zhang.
@@ -133,9 +142,9 @@
                 </div>
             </div>
         </div>
-        <div class="row justify-content-center">
+        <div class="row justify-content-center" id="services">
             <div class="col-10">
-                <p class="section-name">Professional Services</p>
+                <p class="section-name">Services</p>
                 <div class="exp-list">
                     <ul>
                         <li>Reviewer: CVPR, ICLR, MM, PG, WACV
@@ -144,7 +153,7 @@
                 </div>
             </div>
         </div>
-        <div class="row justify-content-center">
+        <div class="row justify-content-center" id="awards">
             <div class="col-10">
                 <p class="section-name">Honors and Awards</p>
                 <div class="exp-list">
