--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
     </div>
 
     <div class="container" id="home">
-        <div class="row intro">
-            <div class="col-9">
+        <div class="row justify-content-center intro">
+            <div class="col-8">
                 <h1 class="text-center">Chen Wang&nbsp&nbsp<span style="font-family: STXingkai;">王琛</span>
                 </h1>
                 <p>I am a CIS PhD student at the University of Pennsylvania starting from Fall 2023,
