--- a/index.html
+++ b/index.html
@@ -73,72 +73,111 @@
             </div>
         </div>
         <div class="row justify-content-center" id="publications">
+
             <div class="col-10">
                 <p class="section-name" style="margin-bottom: 3pt; ">Selected Publications</p>
                 <p style="margin-bottom: 3pt;">* denotes equal contribution</p>
-                <div class="pub-list pub-link">
-                    <ul>
-                        <li>DreamEditor: Text-Driven 3D Scene Editing with Neural Fields</li>
-                        <li>Jingyu Zhuang*, <u>Chen Wang*</u>, Liang Lin, Lingjie Liu, Guanbin Li
-                        </li>
-                        <li><em>SIGGRAPH Asia Conference Papers, 2023</em></li>
-                        <li style="margin-bottom: 10px"><a
-                                href="https://arxiv.org/abs/2306.13455">Paper</a>&nbsp;|&nbsp;<a
+                <div class="row justify-content-center pub-item">
+                    <div class="col-md-3 paper-thumbnail">
+                        <img src="data/paper_thumbnail/dreameditor.png" alt="dreameditor" class="img-fluid">
+                    </div>
+                    <div class="col-md-9 paper-info">
+                        <!-- Paper Title -->
+                        DreamEditor: Text-Driven 3D Scene Editing with Neural Fields
+                        <p class="text-muted">Jingyu Zhuang*, <u>Chen Wang*</u>, Liang Lin,
+                            Lingjie Liu, Guanbin Li</p>
+                        <p><em>SIGGRAPH Asia Conference Papers, 2023</em></p>
+                        <p><a href="https://arxiv.org/abs/2306.13455">Paper</a>&nbsp;|&nbsp;<a
                                 href="https://zjy526223908.github.io/DreamEditor/">Project Page</a>&nbsp;|&nbsp;<a
-                                href="https://github.com/zjy526223908/DreamEditor">Code</a></li></a></li>
+                                href="https://github.com/zjy526223908/DreamEditor">Code</a></p>
+                    </div>
+                </div>
 
-                        <li>VMesh: Hybrid Volume-Mesh Representation for Efficient View Synthesis</li>
-                        <li>Yuan-Chen Guo, Yan-Pei Cao, <u>Chen Wang</u>, Yu He, Ying Shan, Xiaohu Qie, Song-Hai Zhang
-                        </li>
-                        <li><em>SIGGRAPH Asia Conference Papers, 2023</em></li>
-                        <li style="margin-bottom: 10px"><a
-                                href="https://arxiv.org/abs/2303.16184">Paper</a>&nbsp;|&nbsp;<a
-                                href="https://bennyguo.github.io/vmesh/">Project Page</a>
+                <div class="row justify-content-center pub-item">
+                    <div class="col-md-3 paper-thumbnail">
+                        <img src="data/paper_thumbnail/vmesh.png" alt="dreameditor" class="img-fluid">
+                    </div>
+                    <div class="col-md-9 paper-info">
+                        VMesh: Hybrid Volume-Mesh Representation for Efficient View Synthesis
+                        <p class="text-muted">Yuan-Chen Guo, Yan-Pei Cao, <u>Chen Wang</u>,
+                            Yu He, Ying Shan, Xiaohu Qie, Song-Hai Zhang</p>
+                        <p><em>SIGGRAPH Asia Conference Papers, 2023</em></p>
+                        <a href="https://arxiv.org/abs/2303.16184">Paper</a>&nbsp;|&nbsp;<a
+                            href="https://bennyguo.github.io/vmesh/">Project Page</a>
+                    </div>
+                </div>
 
-                        <li>Digging into Depth Priors for Outdoor Neural Radiance Fields</li>
-                        <li><u>Chen Wang</u>, Jiadai Sun, Lina Liu, Chenming Wu, Zhelun Shen, Dayan Wu, Yuchao Dai,
-                            Liangjun Zhang</li>
-                        <li><em>ACM International Conference on Multimedia (Oral), 2023</em></li>
-                        <li style="margin-bottom: 10px"><a
-                                href="https://cwchenwang.github.io/outdoor-nerf-depth/data/paper.pdf">Paper</a>&nbsp;|&nbsp;<a
-                                href="https://cwchenwang.github.io/outdoor-nerf-depth">Project Page</a>&nbsp;|&nbsp;<a
-                                href="https://github.com/cwchenwang/outdoor-nerf-depth">Code</a></li></a></li>
+                <div class="row justify-content-center pub-item">
+                    <div class="col-md-3 paper-thumbnail">
+                        <img src="data/paper_thumbnail/outdoor-nerf-depth.png" alt="outdoor-nerf-depth"
+                            class="img-fluid">
+                    </div>
+                    <div class="col-md-9 paper-info">
+                        Digging into Depth Priors for Outdoor Neural Radiance Fields
+                        <p class="text-muted"><u>Chen Wang</u>, Jiadai Sun, Lina Liu, Chenming Wu, Zhelun Shen, Dayan
+                            Wu, Yuchao Dai,
+                            Liangjun Zhang</p>
+                        <p><em>ACM International Conference on Multimedia (Oral), 2023</em></p>
+                        <a
+                            href="https://cwchenwang.github.io/outdoor-nerf-depth/data/paper.pdf">Paper</a>&nbsp;|&nbsp;<a
+                            href="https://cwchenwang.github.io/outdoor-nerf-depth">Project Page</a>&nbsp;|&nbsp;<a
+                            href="https://github.com/cwchenwang/outdoor-nerf-depth">Code</a>
+                    </div>
+                </div>
 
-                        <li>StructNeRF: Neural Radiance Fields for Indoor Scenes with Structural Hints</li>
-                        <li>Zheng Chen, <u>Chen Wang</u>, Yuan-Chen Guo, Song-Hai Zhang</li>
-                        <li><em>IEEE Transactions on Pattern Analysis and Machine Intelligence, 2023</em></li>
-                        <li style="margin-bottom: 10px"></li>
+                <div class="row justify-content-center pub-item">
+                    <div class="col-md-3 paper-thumbnail">
+                        <img src="data/paper_thumbnail/structnerf.png" alt="structnerf" class="img-fluid">
+                    </div>
+                    <div class="col-md-9 paper-info">
+                        StructNeRF: Neural Radiance Fields for Indoor Scenes with Structural Hints
+                        <p class="text-muted">Zheng Chen, <u>Chen Wang</u>, Yuan-Chen Guo, Song-Hai Zhang</p>
+                        <p><em>IEEE Transactions on Pattern Analysis and Machine Intelligence, 2023</em></p>
+                    </div>
+                </div>
 
-                        <li>DeepPortraitDrawing: Generating Human Body Images from Freehand Sketches</li>
-                        <li><u>Chen Wang*</u>, Xian Wu*, Hongbo Fu, Ariel Shamir, Song-Hai Zhang
-                        </li>
-                        <li><em>Computer & Graphics (CAD/Graphics Oral), 2023</em></li>
-                        <li style="margin-bottom: 10px"><a href="https://arxiv.org/abs/2205.02070">Paper</a></li>
+                <div class="row justify-content-center pub-item">
+                    <div class="col-md-3 paper-thumbnail">
+                        <img src="data/paper_thumbnail/deepportraitdrawing.png" alt="deepportraitdrawing"
+                            class="img-fluid">
+                    </div>
+                    <div class="col-md-9 paper-info">
+                        DeepPortraitDrawing: Generating Human Body Images from Freehand Sketches
+                        <p class="text-muted"><u>Chen Wang*</u>, Xian Wu*, Hongbo Fu, Ariel Shamir, Song-Hai Zhang</p>
+                        <p><em>Computer & Graphics (CAD/Graphics Oral), 2023</em></p>
+                    </div>
+                </div>
 
-                        <li>NeRF-SR: High-Quality Neural Radiance Fields using Super-sampling</li>
-                        <li><u>Chen Wang</u>, Xian Wu, Yuan-Chen Guo, Song-Hai Zhang, Yu-Wing Tai, Shi-Min Hu</li>
-                        <li><em>ACM International Conference on Multimedia, 2022</em></li>
-                        <li style="margin-bottom: 10px"><a
-                                href="https://arxiv.org/abs/2112.01759">Paper</a>&nbsp;|&nbsp;<a
-                                href="https://cwchenwang.github.io/NeRF-SR">Project Page</a>&nbsp;|&nbsp;<a
-                                href="https://github.com/cwchenwang/NeRF-SR">Code</a></li></a></li>
+                <div class="row justify-content-center pub-item">
+                    <div class="col-md-3 paper-thumbnail">
+                        <video width="100%" height="auto" autoplay loop muted controls>
+                            <source src="data/paper_thumbnail/nerf-sr.mp4" type="video/mp4">
+                            Your browser does not support the video tag.
+                        </video>
+                    </div>
+                    <div class="col-md-9 paper-info">
+                        NeRF-SR: High-Quality Neural Radiance Fields using Super-sampling
+                        <p class="text-muted"><u>Chen Wang</u>, Xian Wu, Yuan-Chen Guo, Song-Hai Zhang, Yu-Wing Tai,
+                            Shi-Min Hu</p>
+                        <p><em>ACM International Conference on Multimedia, 2022</em></p>
+                        <a href="https://arxiv.org/abs/2112.01759">Paper</a>&nbsp;|&nbsp;<a
+                            href="https://cwchenwang.github.io/NeRF-SR">Project Page</a>&nbsp;|&nbsp;<a
+                            href="https://github.com/cwchenwang/NeRF-SR">Code</a>
+                    </div>
+                </div>
 
-                        <!-- <li>Learning Implicit Glyph Shape Representation</li>
-                        <li>Ying-Tian Liu, Yuan-Chen Guo, Yi-Xiao Li, <u>Chen Wang</u>, Song-Hai Zhang</li>
-                        <li style="margin-bottom: 10px"><em>IEEE Transactions on Visualization and Computer Graphics, 2022</em></li> -->
-
-                        <li>On Rotation Gains Within and Beyond Perceptual Limitations for Seated VR</li>
-                        <li><u>Chen Wang</u>, Song-Hai Zhang, Yi-Zhuo Zhang, Stefanie Zollmann, Shi-Min Hu</li>
-                        <li style="margin-bottom: 10px"><em>IEEE Transactions on Visualization and Computer Graphics,
-                                2022</em></li>
-
-                        <!-- <li>PalmBoard: Leveraging Implicit Touch Pressure in Statistical Decoding for Indirect Text Entry.</li>
-                        <li>Xin Yi, <u>Chen Wang</u>, Xiaojun Bi, Yuanchun Shi (First Student Author)</li> 
-                        <li><em>ACM CHI Conference on Human Factors in Computing Systems, 2020</em></li>
-                        <li style="margin-bottom: 10px"><a
-                            href="https://github.com/cwchenwang/PalmBoard">Code</a>&nbsp;|&nbsp;<a
-                            href="https://www.youtube.com/watch?v=QyvJfqplGdI&t=408s">Video</a></li> -->
-                    </ul>
+                <div class="row justify-content-center pub-item">
+                    <div class="col-md-3 paper-thumbnail">
+                        <img src="data/paper_thumbnail/rotation-gains.png" alt="rotation-gains" class="img-fluid">
+                    </div>
+                    <div class="col-md-9 paper-info">
+                        On Rotation Gains Within and Beyond Perceptual Limitations for Seated VR
+                        <p class="text-muted"><u>Chen Wang</u>, Song-Hai Zhang, Yi-Zhuo Zhang, Stefanie Zollmann,
+                            Shi-Min
+                            Hu</p>
+                        <p><em>IEEE Transactions on Visualization and Computer Graphics,
+                                2022</em></p>
+                    </div>
                 </div>
             </div>
         </div>
