--- a/index.html
+++ b/index.html
@@ -95,7 +95,9 @@
 
                 <div class="row justify-content-center pub-item">
                     <div class="col-md-3 paper-thumbnail">
-                        <img src="data/paper_thumbnail/vmesh.png" alt="dreameditor" class="img-fluid">
+                        <video width="100%" height="auto" autoplay loop muted controls>
+                            <source src="data/paper_thumbnail/vmesh.mp4" type="video/mp4">
+                        </video>
                     </div>
                     <div class="col-md-9 paper-info">
                         VMesh: Hybrid Volume-Mesh Representation for Efficient View Synthesis
@@ -152,7 +154,6 @@
                     <div class="col-md-3 paper-thumbnail">
                         <video width="100%" height="auto" autoplay loop muted controls>
                             <source src="data/paper_thumbnail/nerf-sr.mp4" type="video/mp4">
-                            Your browser does not support the video tag.
                         </video>
                     </div>
                     <div class="col-md-9 paper-info">
