--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Chen Wang</title>
     <link href='https://fonts.googleapis.com/css?family=Pinyon Script' rel='stylesheet'>
+    <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro' rel='stylesheet' type='text/css'>
     <link rel="icon" type="image/x-icon" href="images/favicon.png">
     <!--Use downloaded bootstrap 5.1.3 -->
     <link href="bootstrap.min.css" rel="stylesheet">
