add news and visitor map

--- a/index.html
+++ b/index.html
@@ -73,6 +73,21 @@
                 <img src="data/pic.png" class="avatar img-fluid rounded-circle">
             </div>
         </div>
+        <div class="row justify-content-center" id="news">
+            <div class="col-10">
+                <p class="section-name" style="margin-bottom: 3pt; ">News</p>
+                <div class="exp-list">
+                    <ul>
+                        <li>&#x2022;&nbsp (01/2024) Check out my <a
+                                href="https://github.com/cwchenwang/awesome-3d-diffusion">GitHub Repo</a> on a list of
+                            papers on "Diffusion Models for
+                            3D
+                            Generation".
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
         <div class="row justify-content-center" id="publications">
 
             <div class="col-10">
@@ -188,7 +203,7 @@
                 <p class="section-name">Services</p>
                 <div class="exp-list">
                     <ul>
-                        <li>Reviewer: CVPR, ICLR, MM, PG, WACV
+                        <li>Reviewer: CVPR, ECCV, ICLR, MM, PG, WACV
                         </li>
                     </ul>
                 </div>
@@ -206,8 +221,14 @@
                 </div>
             </div>
         </div>
+        <div class="row justify-content-center">
+            <div class="col-3">
+                <script type="text/javascript" id="clustrmaps"
+                    src="//clustrmaps.com/map_v2.js?d=S31GDEkuyTI1cAIMEWRZaWrVuS-0CFW0bIl3_ZDOvmk&cl=ffffff&w=a"></script>
+            </div>
+        </div>
         <footer class="text-center">
-            <p>This website was last updated by Chen in Oct, 2023.</p>
+            <p>This website was last updated in Jan, 2024.</p>
             <p>© Copyright 2021 - Present</p>
         </footer>
     </div>
