--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
     <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script> -->
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bitter:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
+
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-26S5T791WC"></script>
     <script>
@@ -54,8 +59,10 @@
                 </h1>
                 <p>I am a CIS PhD student at the University of Pennsylvania starting from Fall 2023,
                     advised by Prof.
-                    Lingjie Liu and affiliated with the GRASP lab. My
-                    research interests are computer graphics and computer vision, with a focus on 3D generative models
+                    Lingjie Liu, where I am affiliated with the Graphics Lab and GRASP lab. I am also a member of
+                    AnySyn3D research group. My
+                    research interests are computer graphics and computer vision, with a focus on 3D/4D generative
+                    models
                     and neural 3D representaions.</p>
                 <p>I did my undergraduate and master study in CS at Tsinghua University, working with Prof.
                     Shi-Min Hu
