--- a/index.html
+++ b/index.html
@@ -54,16 +54,18 @@
 
     <div class="container" id="home">
         <div class="row justify-content-center intro">
-            <div class="col-9">
+            <div class="links1 col-9">
                 <h1 class="text-center">Chen Wang&nbsp&nbsp<span style="font-family: STXingkai;">王琛</span>
                 </h1>
                 <p>I am a CIS PhD student at the University of Pennsylvania starting from Fall 2023,
-                    advised by Prof.
-                    Lingjie Liu, where I am affiliated with the Graphics Lab and GRASP lab. I am also a member of
-                    AnySyn3D research group. My
+                    where I have the pleasure to work with <a href="https://lingjie0206.github.io/">Prof.
+                        Lingjie Liu</a>. I am affiliated with the Graphics Lab and GRASP lab. I am also a member
+                    of
+                    <a href="https://anysyn3d.github.io/">AnySyn3D</a> research group. My
                     research interests are computer graphics and computer vision, with a focus on 3D/4D generative
                     models
-                    and neural 3D representaions.</p>
+                    and neural 3D representaions.
+                </p>
                 <p>I did my undergraduate and master study in CS at Tsinghua University, working with Prof.
                     Shi-Min Hu
                     and Prof. Song-Hai Zhang.
