--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Bitter:ital,wght@0,100..900;1,100..900&display=swap"
-        rel="stylesheet">
+    <!-- <link href="https://fonts.googleapis.com/css2?family=Bitter:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet"> -->
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-26S5T791WC"></script>
@@ -79,7 +79,7 @@
                 </div>
             </div>
             <div class="col-3">
-                <img src="data/pic.png" class="avatar img-fluid rounded-circle">
+                <img src="data/pic.jpg" class="avatar img-fluid rounded-circle">
             </div>
         </div>
         <div class="row justify-content-center" id="news">
@@ -105,6 +105,19 @@
             <div class="col-12">
                 <p class="section-name" style="margin-bottom: 3pt; ">Selected Publications</p>
                 <p style="margin-bottom: 3pt;">* denotes equal contribution</p>
+                <div class="row justify-content-center pub-item">
+                    <div class="col-md-4 paper-thumbnail">
+                        <img src="data/paper_thumbnail/boot.jpeg" alt="boot" class="img-fluid">
+                    </div>
+                    <div class="col-md-8 paper-info">
+                        <!-- Paper Title -->
+                        Data-free Distillation of Denoising Diffusion Models with Bootstrapping
+                        <p class="text-muted">Jiatao Gu, <u>Chen Wang</u>, Shuangfei Zhai, Yizhe Zhang, Lingjie Liu,
+                            Josh Susskind</p>
+                        <p><em>International Conference on Machine Learning, 2024</em></p>
+                    </div>
+                </div>
+
                 <div class="row justify-content-center pub-item">
                     <div class="col-md-4 paper-thumbnail">
                         <img src="data/paper_thumbnail/dreameditor.png" alt="dreameditor" class="img-fluid">
