--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                 </div>
             </div>
             <div class="col-3">
-                <img src="data/pic.jpg" class="avatar img-fluid rounded-circle">
+                <img src="data/pic.JPG" class="avatar img-fluid rounded-circle">
             </div>
         </div>
         <div class="row justify-content-center" id="news">
